# skyrim-rich-presence

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: XSEPlugin.cmake
include/: PCH.h
package/SKSE/plugins/: DiscordRichPresence.ini  RichPresence.ini
src/: RichPresence.cpp  RichPresence.h  XSEPlugin.cpp
src/discord-rpc/: discord_register.h  discord_rpc.cpp  discord_rpc.h  serialization.cpp
